<resources>
    <string name="app_name">Blink Reader</string>
    <string name="paste_icon_content_description">Paste Content to read</string>
    <string name="switch_reading_icon_content_description">Change reading view</string>
    <string name="paste_error">Could not paste content</string>
    <string name="max_words_error">Texts with more 3000 works cannot be followed with the highlighter</string>
    <string name="copy_text_instructions">Copy text to your clipboard, then click the paste icon on
        the App Bar to speed read it!</string>

    <!-- Seekbar accessibility String -->
    <string name="replay_30_content_description">Rewind the reader 30 words</string>
    <string name="replay_10_content_description">Rewind the reader 10 words</string>
    <string name="replay_5_content_description">Rewind the reader 5 words</string>
    <string name="replay_1_content_description">Rewind the reader 1 word</string>
    <string name="play_content_description">Play the reader</string>
    <string name="pause_content_description">Pause the reader</string>
    <string name="ff_5_content_description">Fast-forward the reader 5 words</string>
    <string name="ff_10_content_description">Fast-forward the reader 10 words</string>
    <string name="ff_30_content_description">Fast-forward the reader 30 words</string>

    <!--Preferences Strings-->
    <string name="reading_preference_category_title">Reading Preferences</string>
    <string name="reading_speed_preference_title">Reading Speed</string>
    <string name="reading_speed_preference_summary">Set the words per minute at which the Blink Reader
        will display (values less than 15 are treated as 15)</string>

    <string name="visual_preference_category_title">Visual Preferences</string>
    <string name="dark_mode_preference_title">Dark Mode</string>
    <string name="reading_font_preference_title">Reading Font</string>

    <!--Preferences Keys-->
    <string name="reading_speed_preference_key">reading_speed_preference_key</string>
    <string name="dark_theme_preference_key">dark_theme_preference_key</string>
    <string name="reading_font_preference_key">reading_font_preference_key</string>
    <string name="reading_mode_preference_key">reading_mode_preference_key</string>
    <string name="reading_mode_blink_preference_value">reading_mode_blink_preference_value</string>
    <string name="reading_mode_book_preference_value">reading_mode_book_preference_value</string>

    <!--Fonts -->
    <string name="bitter_font_label">Bitter</string>
    <string name="raleway_font_label">Raleway</string>
    <string name="roboto_mono_font_label">Roboto Mono</string>
    <string name="bitter_font_value">bitter_font_value</string>
    <string name="raleway_font_value">raleway_font_value</string>
    <string name="roboto_mono_font_value">roboto_mono_font_value</string>

</resources>
