<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/reading_preference_category_title"
        app:iconSpaceReserved="false">

        <SeekBarPreference
            android:key="@string/reading_speed_preference_key"
            android:title="@string/reading_speed_preference_title"
            app:iconSpaceReserved="false"
            android:summary="@string/reading_speed_preference_summary"
            app:showSeekBarValue="true"
            android:defaultValue="120"
            android:max="1500" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/visual_preference_category_title"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="120"
            android:key="@string/dark_theme_preference_key"
            android:max="1500"
            android:title="@string/dark_mode_preference_title"
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

</PreferenceScreen>